--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,8 @@
     <dimen name="space_medium">12dp</dimen>
     <dimen name="space_large">24dp</dimen>
     <dimen name="text_size_big">32sp</dimen>
-    <dimen name="text_size_small">18sp</dimen>"
+    <dimen name="text_size_medium">24sp</dimen>
+    <dimen name="text_size_small">18sp</dimen>
+    <dimen name="text_title_padding">8dp</dimen>
+    <dimen name="body_text_padding">4dp</dimen>
 </resources>
