--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="Theme.TheSociaNetwork" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:textSize">@dimen/space_large</item>
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/purple_200</item>
         <item name="colorAccent">@color/teal_200</item>
+    </style>
+
+    <style name="StyleTitleText">
+        <item name="android:textColor">@android:color/holo_red_dark</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/text_size_big</item>
+        <item name="android:padding">@dimen/text_title_padding</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+    
+    <style name="StyleSubtitleText">
+        <item name="android:textColor">#540000</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/text_size_medium</item>
+        <item name="android:padding">@dimen/text_title_padding</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="StyleBodyText">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/text_size_small</item>
+        <item name="android:padding">@dimen/body_text_padding</item>
+        <item name="android:gravity">center</item>
     </style>
 </resources>
