--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,12 @@
         <item name="android:padding">@dimen/body_text_padding</item>
         <item name="android:gravity">center</item>
     </style>
+    
+    <style name="LinkTextStyle">
+        <item name="android:textColor">@color/textLink</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/text_size_small</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">@dimen/body_text_padding</item>
+    </style>
 </resources>
