--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/space_large"
+        android:contentDescription="null"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@id/form"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_login"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/space_large"
@@ -91,5 +103,53 @@
             android:textSize="@dimen/text_size_medium"
             app:layout_constraintBottom_toTopOf="@id/or" />
 
+        <TextView
+            android:id="@+id/forgotPassword"
+            style="@style/LinkTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/space_medium"
+            android:text="@string/feat_login_forgot"
+            app:layout_constraintBottom_toTopOf="@id/login"
+            app:layout_constraintEnd_toEndOf="@id/login" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password"
+            style="@style/StyleSubtitleText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/space_small"
+            android:background="@drawable/background_login_google"
+            android:elevation="0dp"
+            android:inputType="textPassword"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_medium"
+            app:endIconMode="password_toggle"
+            app:layout_constraintBottom_toTopOf="@id/forgotPassword"
+            app:placeholderText="@string/feat_login_password" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/emailInputLayout"
+            style="@style/StyleSubtitleText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/space_medium"
+            android:background="@drawable/background_login_google"
+            android:hint="@string/feat_login_email"
+            app:endIconMode="clear_text"
+            app:layout_constraintBottom_toTopOf="@id/password"
+            app:placeholderText="@string/feat_login_email" />
+
+        <TextView
+            style="@style/StyleTitleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingVertical="@dimen/space_medium"
+            android:text="@string/feat_login_login"
+            app:layout_constraintBottom_toTopOf="@id/emailInputLayout"
+            app:layout_constraintStart_toStartOf="@id/emailInputLayout"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
