--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="textTitlePrimary">#FD0000</color>
-    <color name="textLink">#2196F3</color>
+    <color name="textLink">#1A99FF</color>
     <color name="backgroundColorGoogle">#D9D9D9</color>
     <color name="separatorBackground">#BCBCBC</color>
 </resources>
